--- a/src/app/shared/components/github-link/github-link.component.html
+++ b/src/app/shared/components/github-link/github-link.component.html
@@ -1,3 +1,3 @@
-<a href="#" class="github-link">
+<a href="https://github.com/IraKukurika/home-economics" class="github-link">
     View code <i class="fa fa-github" aria-hidden="true"></i>
 </a>
